testsuite/bsc.codegen/strings/StringHead_Empty.bsv
(* synthesize *)
module sysStringHead_Empty();
   rule r;
      $display(stringHead(""));
   endrule
endmodule
